<resources>
    <string name="app_name">Image Map Tester</string>
    <string name="next_text">Next</string>
    <string name="add_excel_file_title">Add excel file</string>
    <string name="excel_file_type_msg">Supported excel file type .xlsx</string>
    <string name="add_image_file_title">Add image file</string>
    <string name="image_file_type_msg">Supported image file type .png</string>
    <string name="choose">Choose</string>
    <string name="no_file_selected_text">No file selected</string>
    <string name="dummy_page_no_1">Page No: 1</string>
    <string name="page_no_d">Page No: %d</string>
    <string name="image">Image</string>
    <string name="invalid_image_file_text">Invalid image file.</string>
    <string name="dummy_surah_no_1">Surah No: 1</string>
    <string name="surah_no_d">Surah No: %d</string>
    <string name="dummy_ayat_no_1">Ayat No: 1</string>
    <string name="ayat_no_d">Ayat No: %d</string>
    <string name="ok_text">OK</string>
    <string name="note_text"><b>Note:</b> If the page number, surah number, and ayat number do not match the values in the image, please double-check the values in the Excel sheet.</string>
    <string name="loading">Loading, please wait...</string>
</resources>